[package]
name = "ac-power"
version = "0.1.0"
edition = "2018"
authors = ["donny zimmanck <dzimmanck@enphaseenergy.com"]
license = "Apache-2.0"
categories = ["no-std"]
description = "Reference frames and transforms for ac power analysis"
keywords = ["ac", "power", "ac-power", "instantaneous power"]
repository = "https://github.com/unifi-consortium/ac-power"
readme = "README.md"

[dependencies]
# idsp = "0.15.1"
idsp = {git="https://github.com/quartiq/idsp", tag="main"}  # FIXME: Switch to next release, which should pass no_std check
derive_more = "0.99.17"

[dev-dependencies]
approx = "0.5.1"
