[package]
name = "ac-power"
version = "0.1.1"
edition = "2018"
authors = ["donny zimmanck <dzimmanck@enphaseenergy.com"]
license = "Apache-2.0"
categories = ["no-std"]
description = "Reference frames and transforms for ac power analysis"
keywords = ["ac", "power", "ac-power"]
repository = "https://github.com/unifi-consortium/ac-power"
readme = "README.md"

[dependencies]
idsp = "0.15.1"
derive_more = "0.99.17"
micromath = "2.1.0"

[dev-dependencies]
approx = "0.5.1"
